--- a/class13.qmd
+++ b/class13.qmd
@@ -16,8 +16,10 @@ format:
 
 - A New Example from a 2020 letter to NEJM
 - Hypothesis Testing and Interval Estimation
-  - Quantitative Outcome: Single Sample
   - Quantitative Outcome: Paired Samples
+  - Quantitative Outcome: Single Sample
+  - t, Bootstrap and Wilcoxon methods
+- Slides 1-70 in-class, the rest are for at-home study
 
 ::: aside
 Version `r Sys.time()`
@@ -65,21 +67,13 @@ For more, see Spiegelhalter, Chapter 3
 
 ## Point Estimation and Confidence Intervals
 
-The basic theory of estimation can be used to indicate the probable accuracy and potential for bias in estimating based on limited samples.  
-
 - A **point estimate** provides a single best guess as to the value of a population or process parameter.
-- A **confidence interval** can convey how much error one must allow for in a given estimate.
+- A **confidence interval** can convey how much error one must allow for in a given estimate. It includes an interval estimate and a probability statement (confidence level.)
 
-## Confidence Intervals include:
-
-1. An interval estimate describing the population parameter of interest (here the population mean), and
-2. A probability statement, expressed in terms of a confidence level.
-
-The key tradeoffs are 
+The key tradeoffs in estimation are 
 
 - cost vs. precision (larger samples produce narrower intervals), and 
-- precision vs. confidence in the correctness of the statement.  
-
+- precision vs. confidence in the accuracy of the statement.  
 
 ## Today's Example
 
@@ -95,29 +89,622 @@ Wyllie et al. [Saliva or Nasopharyngeal Swab Specimens for Detection of SARS-CoV
 
 ```{r}
 #| echo: true
-sal <- read_excel("c13/data/nejm_saliva1.xlsx") |>
-  clean_names() |>
-  mutate(subject = as.character(subject))
+sal <- read_excel("c13/data/nejm_saliva.xlsx") |>
+  clean_names() |> mutate(subject = as.character(subject))
 
-sal
+dim(sal); pct_complete_case(sal)
+
+head(sal)
 ```
 
-## Any missing data?
-
-```{r}
-pct_complete_case(sal)
-```
-
-Nope.
-
-## A Codebook (ignoring `subject`) (1/2)
+## A Codebook (ignoring `subject`) {.smaller}
 
 Variable | Description
 -------- | ----------------------------------
-`np_titre` | Detected copies/ml of SARS-CoV-2 RNA via Nasopharyngeal Swab Sample
-`s_titre` | Detected copies/ml of SARS-CoV-2 RNA via Saliva Sample
+`np_n1` | cycle threshold for PCR assay targeting SARS-CoV-2 N1 sequence via Nasopharyngeal Swab Sample
+`s_n1` | cycle threshold via Saliva Sample
+`np_titre` | Detected copies/ml of SARS-CoV-2 RNA via Nasopharyngeal Swab
+`s_titre` | Detected copies/ml of SARS-CoV-2 RNA via Saliva
 
-More details available in Appendix 1 and 2 of Wyllie et al. (2020)
+- More details available in Appendix 1 and 2 of Wyllie et al. (2020)
+- There is an equation to take `n1` values to `titre` values.
+
+## Key Question A
+
+Do the two sampling approaches (nasopharyngeal and saliva) provide meaningfully different results?
+
+- Does the population of NP minus Saliva paired differences follow a distribution centered around zero?
+- If we'd obtained data from the entire target population, is it reasonable that the mean difference between Saliva and NP would be zero?
+
+This is a **paired samples** question, comparing NP to Saliva, where each subject provided both an NP and a Saliva result.
+
+## Question A: Paired Differences
+
+Each subject provides a Nasopharyngeal response (`np_n1`) and a paired (by subject) Saliva response (`s_n1`). 
+
+- We'll analyze the paired differences (`np_n1` - `s_n1`).
+
+```{r}
+#| echo: true
+
+sal <- sal |> mutate(diff = np_n1 - s_n1)
+## last three subjects shown below
+tail(sal, 3) |> select(subject, np_n1, s_n1, diff) |> 
+  kbl() |> kable_minimal(full_width = FALSE, font_size = 24)
+```
+
+## Data Setup for Question A
+
+We have a sample of 70 observations of the saliva - NP paired differences. We want to know if they might plausibly come from a distribution with mean zero.
+
+```{r}
+#| echo: true
+stem(sal$diff)
+```
+
+
+## Key Question B
+
+Could the sample of N1 saliva data have plausibly come from a population with mean 35?
+
+- If we could have sampled the entire target population, is it reasonable that the mean of that population would be 35?
+- Is the true mean of N1 (saliva) = 35?
+
+This is a **one-sample** question, comparing N1 in Saliva to 35, and ignoring the Nasopharyngeal data.
+
+## Data Setup for Question B
+
+We have a sample of 70 observations of the N1 values for Saliva. We want to know if they might plausibly come from a distribution with mean 35.
+
+```{r}
+#| echo: true
+stem(sal$s_n1)
+```
+
+## Key Insight
+
+A paired samples analysis and a one-sample analysis are done in exactly the same way.
+
+- If you have paired data, take paired differences, and treat them as you would a single sample.
+- So, I can walk through Question A's analysis, and Question B will take the same approach.
+
+The comparison of Saliva vs. Nasopharyngeal specimens seems of greater interest, so we'll start with that, and Question A.
+
+# Question A Analyses
+
+## DTDP for Paired Differences
+
+```{r}
+#| echo: true
+#| output-location: slide
+
+p1 <- ggplot(sal, aes(sample = diff)) +
+  geom_qq(col = "slateblue") + geom_qq_line(col = "red") + 
+  theme(aspect.ratio = 1) +
+  labs(y = "Paired NP - Saliva differences",
+       x = "Expectations from N(0,1)")
+
+p2 <- ggplot(sal, aes(x = diff)) +
+  geom_histogram(bins = 10, col = "white", fill = "slateblue")
+
+p3 <- ggplot(sal, aes(x = diff, y = "")) +
+  geom_violin(col = "slateblue") +
+  geom_boxplot(fill = "slateblue", alpha = 0.5, width = 0.3) +
+  stat_summary(fun = "mean", geom = "point",
+               shape = 23, size = 3, fill = "white") +
+  labs(y = "")
+
+p1 + (p2/p3 + plot_layout(heights = c(2,1))) + 
+  plot_annotation(title = "Paired NP - Saliva differences (n = 70 subjects)",
+                  subtitle = "Normal model somewhat reasonable?")
+```
+
+## Paired Differences by the Numbers
+
+```{r}
+#| echo: true
+
+mosaic::favstats(~ diff, data = sal) |> 
+  kbl(digits = 3) |> kable_minimal(font_size = 24)
+
+Hmisc::describe(sal$diff)
+```
+
+
+## Hypothesis Testing / Confidence Intervals for a Mean of Paired Differences {.smaller}
+
+1. Using the **t distribution** to produce a test and confidence interval about the population mean of the paired differences, $\mu$.
+  - Assumes that the paired differences are drawn from a Normal distribution.
+2. Using the **bootstrap** to produce a test or confidence interval about $\mu$
+  - Doesn't assume Normality of the paired differences.
+3. Using the **Wilcoxon signed rank** procedure to produce a test/CI about the population *pseudo-median* of the paired differences.
+  - Pseudo-median is close to the mean/median only if differences are *symmetric*.
+
+## Hypothesis Testing Elements
+
+1. Specify the null hypothesis, $H_0$.
+2. Specify the alternative hypothesis, $H_A$.
+3. Specify $\alpha$, tolerable Pr(incorrectly rejecting $H_0$).
+    - Confidence level is 100(1-$\alpha$)%, so 95% confidence means we will tolerate $\alpha = 0.05$.
+4. Specify the approach to be used to make inferences based on the sample.
+5. Obtain the data and summarize it to obtain appropriate p-value, and/or CI.
+
+## For our Question A
+
+$H_0: \mu = 0$ vs. $H_A: \mu \neq 0$.
+
+1. Our null hypothesis is that the Saliva and NP approaches yield the same results. This would lead to their paired differences having mean zero.
+2. If the null hypothesis is not true, it means that the alternative (that the true mean of the paired differences is either greater than or less than 0) must be true.
+3. We'll use a 95% confidence level, corresponding to $\alpha$ = 0.05.
+
+## Available Approaches for Inference
+
+- t-based approach (either via indicator variable regression or direct t test)
+- bootstrap approach via `infer` package
+- bootstap confidence interval via `smean.cl.boot()`
+- Wilcoxon signed rank
+
+# T-based Approach
+
+## Indicator Variable Regression
+
+This produces the t test result for the mean of `diff`.
+
+```{r}
+#| echo: true
+
+m1 <- lm(diff ~ 1, data = sal)
+
+tidy(m1, conf.int = TRUE, conf.level = 0.95) |>
+  kbl(digits = 3) |> kable_classic(font_size = 24)
+```
+
+## Another way to get the t results
+
+This also produces the t test result for the mean of `diff`.
+
+```{r}
+#| echo: true
+
+t.test(sal$diff, mu = 0, conf.level = 0.95)
+```
+
+## Hand-calculation of the t statistic
+
+The one-sample t test uses as its test statistic:
+
+$$
+t = \frac{\bar{x} - \mu_0}{s/\sqrt{n}} = \frac{2.36-0}{8.672/\sqrt{70}} = \frac{2.36}{1.0365} = 2.277
+$$
+
+- Sample mean $\bar{x}$, standard deviation $s$, null hypothesized mean = $\mu_0$.
+
+## Obtaining the p value
+
+The t distribution is indexed by its degrees of freedom.
+- In this case, we have $n = 70$ and df = $n-1$ = 69.
+
+In R, we can obtain a two-tailed p value for our test statistic of 2.277 using 69 degrees of freedom with:
+
+```{r}
+#| echo: true
+
+pt(2.277, df = 69, lower.tail = FALSE)*2
+```
+
+## Defining a *p* Value (but not very well)
+
+The *p* value estimates the probability that we would obtain a result as much in favor or more in favor of the alternative hypothesis $H_A$ as we did, assuming that $H_0$ is true. 
+
+- The *p* value is a conditional probability of seeing evidence as strong or stronger in favor of $H_A$ calculated **assuming** that $H_0$ is true.
+
+## How people use the *p* Value
+
+- If the *p* value is less than $\alpha$, this suggests we might reject $H_0$ in favor of $H_A$, and declare the result statistically significant.
+
+But we won't be comfortable with doing that, at least in due time.
+
+## What the *p* Value isn't
+
+The *p* value is not a lot of things. It's **NOT**
+
+- The probability that the alternative hypothesis is true
+- The probability that the null hypothesis is false
+- Or anything like that.
+
+The *p* value **is closer to** a statement about the amount of statistical evidence contained in the data that favors the alternative hypothesis $H_A$. It's a measure of the evidence's credibility.
+
+## Confidence Interval via t distribution
+
+The two-sided 100(1-$\alpha$)% confidence interval for $\mu$ is:
+
+$$\bar{x} \pm t_{\alpha/2, n-1} ( \frac{s_x}{\sqrt{n}} ) ==> 2.36 \pm t_{0.025, 69} (\frac{8.672}{\sqrt{70}})$$
+
+and we can obtain $t_{0.025, 69}$ from R with:
+
+```{r}
+#| echo: true
+
+qt(0.025, 69, lower.tail = FALSE)
+```
+
+$$
+2.36 \pm 1.9949 \times 1.0365 => 2.36 \pm 2.07, \mbox{ or } (0.29, 4.43)
+$$
+
+## Interpreting the Confidence Interval
+
+Some people think this means that there is a 95% chance that the true mean of the population, μ, falls between 0.29 and 4.43. Not true.
+
+Our confidence is in the process. If we built 100 confidence intervals this way, 95 would be expected to contain the true value of the parameter $\mu$.
+
+- We are accounting for one particular type of error (called sampling error) in developing our interval estimate, while assuming all other potential sources of error are negligible.
+
+## Assumptions of the t-based approaches
+
+1. The data (specifically the paired differences) are a random sample from what we would observe if we could obtain the entire target population.
+2. The subjects who provide the responses we observe are selected independently from the target population. In other words, if I am selected, it does not change the probability that you will be selected if we are each in the target population.
+3. The target population's paired differences follow a Normal distribution.
+
+## Our Paired Differences, Again
+
+```{r}
+p1 <- ggplot(sal, aes(sample = diff)) +
+  geom_qq(col = "slateblue") + geom_qq_line(col = "red") + 
+  theme(aspect.ratio = 1) +
+  labs(y = "Paired NP - Saliva differences",
+       x = "Expectations from N(0,1)")
+
+p2 <- ggplot(sal, aes(x = diff)) +
+  geom_histogram(bins = 10, col = "white", fill = "slateblue")
+
+p3 <- ggplot(sal, aes(x = diff, y = "")) +
+  geom_violin(col = "slateblue") +
+  geom_boxplot(fill = "slateblue", alpha = 0.5, width = 0.3) +
+  stat_summary(fun = "mean", geom = "point",
+               shape = 23, size = 3, fill = "white") +
+  labs(y = "")
+
+p1 + (p2/p3 + plot_layout(heights = c(2,1))) + 
+  plot_annotation(title = "Paired NP - Saliva differences (n = 70 subjects)",
+                  subtitle = "Does a Normal distribution seem somewhat reasonable?")
+```
+
+# Bootstrap Approach
+
+## What the infer package does
+
+![](c13/images/ht-diagram.png)
+
+## A randomization test using infer tools
+
+This is a randomization-based analog to the 1-sample t test. First, we calculate the observed statistic:
+
+```{r}
+#| echo: true
+
+observed_statistic <- sal |> 
+  specify(response = diff) |>
+  calculate(stat = "mean")
+
+observed_statistic
+```
+
+## Compare to a Null Distribution?
+
+Our next goal is to compare this observed statistic to a null distribution, generated under the assumption that the mean was actually 0, to get a sense of how likely it would be for us to see this observed mean difference in the population.
+
+Our null hypothesis is still $H_0: \mu = 0$ vs. the two-tailed alternative $H_A: \mu \neq 0$.
+
+## Using the bootstrap to generate the null distribution
+
+We can generate the null distribution using the bootstrap. 
+
+- In the bootstrap, for each replicate, a sample of size equal to the input sample size is drawn (with replacement) from the input sample data. 
+- This allows us to get a sense of how much variability we’d expect to see in the entire population so that we can then understand how unlikely our sample mean would be.
+
+## `infer` package has 4 main verbs
+
+Verb | Activity
+------ | --------------------------------
+`specify()` | specify variable, or relationship between variables, that interests us
+`hypothesize()` | declare the null hypothesis
+`generate()` | generate data reflecting the null hypothesis
+`calculate()` | obtain a distribution of statistics from the generated data to form the null distribution
+
+## Generate the null distribution
+
+Using the bootstrap, we need to set a seed so we can replicate our work later:
+
+```{r}
+#| echo: true
+set.seed(20221011)
+null_dist_diffs <- sal |>
+  specify(response = diff) |>
+  hypothesize(null = "point", mu = 0) |>
+  generate(reps = 1000, type = "bootstrap") |>
+  calculate(stat = "mean")
+```
+
+## Resulting Null Distribution
+
+Get a sense of where our observed statistic falls.
+
+```{r}
+#| echo: true
+
+null_dist_diffs |>
+  visualize() +
+  shade_p_value(observed_statistic, direction = "two-sided")
+```
+
+## Calculating the bootstrap *p* value
+
+```{r}
+#| echo: true
+
+p_value_1_sample <- null_dist_diffs |>
+  get_p_value(obs_stat = observed_statistic,
+              direction = "two-sided")
+
+p_value_1_sample
+```
+
+Thus, if the true mean of the paired differences was really 0, our approximation of the probability that we would see a test statistic as or more extreme than is approximately 0.022
+
+## Bootstrap CI from `infer`
+
+Using a reasonable approach based on the bootstrap sample generated by `infer`:
+
+```{r}
+#| echo: true
+
+ci_diffs <- null_dist_diffs |>
+  get_confidence_interval(point_estimate = observed_statistic, 
+                          level = 0.95, type = "se")
+
+ci_diffs
+```
+
+## Bootstrap CI from `smean.cl.boot()`
+
+$H_0: \mu = 0$ vs. $H_A: \mu \neq 0$.
+
+We've previously seen a quick way to get a 95% bootstrap confidence interval for a mean via `smean.cl.boot()` from `Hmisc`:
+
+```{r}
+#| echo: true
+set.seed(431)
+smean.cl.boot(sal$diff, conf.int = 0.95, B = 2000)
+```
+
+What can we conclude about our hypotheses in light of this interval?
+
+## When is a Bootstrap CI for $\mu$ Reasonable? {.smaller}
+
+The interval will be reasonable as long as we are willing to believe that:
+
+- the original sample was a random sample (or at least a completely representative sample) from a population, 
+- and that the samples are independent of each other (selecting one subject doesn't change the probability that another subject will also be selected)
+- and that the samples are identically distributed (even though that distribution may not be Normal.) 
+
+It is still possible that the results can be both:
+
+- **inaccurate** (i.e. they can, include the true value of the unknown population mean less often than the stated confidence probability) and 
+- **imprecise** (i.e., they can include more extraneous values of the unknown population mean than is desirable).
+
+## Assumptions of the bootstrap {.smaller}
+
+1. The data (specifically the paired differences) are a random sample from what we would observe if we could obtain the entire target population.
+2. The subjects who provide the responses we observe are selected independently from the target population. In other words, if I am selected, it does not change the probability that you will be selected if we are each in the target population.
+
+# Wilcoxon Signed Rank Procedure
+
+## The Wilcoxon Signed Rank Procedure
+
+The Wilcoxon signed rank approach builds interval estimates for the population *pseudo-median* when the population can only be assumed to be symmetric. 
+
+- For any sample, the pseudo-median is defined as the median of all of the midpoints of pairs of observations in the sample. 
+- As it turns out, if you're willing to assume the population is **symmetric** (but not necessarily Normally distributed) then the pseudo-median is equal to the population median.
+
+## Wilcoxon based 95% confidence interval
+
+```{r}
+#| echo: true
+wilcox.test(sal$diff, conf.int = TRUE, conf.level = 0.95)
+```
+
+## Interpreting the Wilcoxon Signed Rank CI
+
+If we're willing to believe the `diff` values come from a population with a symmetric distribution, the 95% Confidence Interval for the population median would be (`r round(wilcox.test(sal$diff, conf.int=TRUE, conf.level=0.95)$conf.int,1)`). For a non-symmetric population, this only applies to the *pseudo-median*. The pseudo-median will be fairly close to the sample mean and median if the population actually follows a symmetric distribution. Here, the estimated pseudo-median was 3.015.
+
+```{r}
+#| echo: true
+mosaic::favstats(~ diff, data = sal)
+```
+
+## Wilcoxon Assumptions {.smaller}
+
+1. The data (specifically the paired differences) are a random sample from what we would observe if we could obtain the entire target population.
+2. The subjects who provide the responses we observe are selected independently from the target population. In other words, if I am selected, it does not change the probability that you will be selected if we are each in the target population.
+3. The data are reasonably assumed to come from a symmetric population, so that the pseudo-median is of interest.
+
+## Question A Conclusions
+
+Does the population of NP minus Saliva paired differences follow a distribution centered around zero?
+
+- Sample of paired differences reasonably modeled by Normal distribution.
+- $H_0: \mu = 0$ vs. $H_A: \mu \neq 0$.
+- Results from our four approaches on the next slide.
+
+## Question A Results {.smaller}
+
+Procedure | *p* | Estimate | 95% CI
+:--------: | -----: | :--------: | --------:
+t | 0.026 | $\hat{\mu} = \bar{x}$ = 2.36 | (0.29, 4.43)
+Bootstrap via `infer` | 0.022 | $\hat{\mu} = \bar{x}$ = 2.36 | (0.34, 4.38)
+Bootstrap via `Hmisc` | < 0.05 | $\hat{\mu} = \bar{x}$ = 2.36 | (0.37, 4.41)
+Wilcoxon | 0.013 | ps.-med. = 3.02 | (0.62, 5.17)
+
+What can we conclude?
+
+# Question B Analyses
+
+## Question B (Single Sample)
+
+$H_0: \mu = 35$ vs. $H_A: \mu \neq 35$ where $\mu$ is now the population mean of the N1 values for Saliva Samples.
+
+Again, we'll use a 95% confidence level, or $\alpha = 0.05$.
+
+- DTDP 
+- t approaches 
+- bootstrap with `infer`, bootstrap with `smean.cl.boot()`,
+- Wilcoxon signed rank
+- Conclusions
+
+## DTDP for Saliva N1 values
+
+```{r}
+#| echo: true
+#| output-location: slide
+
+p1 <- ggplot(sal, aes(sample = s_n1)) +
+  geom_qq(col = "saddlebrown") + geom_qq_line(col = "red") + 
+  theme(aspect.ratio = 1) +
+  labs(y = "Saliva N1 values",
+       x = "Expectations from N(0,1)")
+
+p2 <- ggplot(sal, aes(x = s_n1)) +
+  geom_histogram(bins = 10, col = "white", fill = "saddlebrown")
+
+p3 <- ggplot(sal, aes(x = s_n1, y = "")) +
+  geom_violin(col = "saddlebrown") +
+  geom_boxplot(fill = "saddlebrown", alpha = 0.5, width = 0.3) +
+  stat_summary(fun = "mean", geom = "point",
+               shape = 23, size = 3, fill = "white") +
+  labs(y = "")
+
+p1 + (p2/p3 + plot_layout(heights = c(2,1))) + 
+  plot_annotation(title = "Saliva Samples: N1 values (n = 70 subjects)",
+                  subtitle = "Normal model somewhat reasonable?")
+```
+
+## Numerical Summaries
+
+```{r}
+#| echo: true
+
+mosaic::favstats(~ s_n1, data = sal) |>
+  kbl(digits = 2) |> kable_minimal(font_size = 24)
+```
+
+
+## T approach
+
+Even though the Normal assumption for the N1 values is hard to believe.
+
+```{r}
+#| echo: true
+tt <- t.test(sal$s_n1, mu = 35, conf.level = 0.95)
+tidy(tt) |> kbl(digits = 3) |> kable_classic_2()
+```
+
+## Bootstrap via `infer`
+
+```{r}
+#| echo: true
+#| output-location: slide
+
+observed_statistic <- sal |> 
+  specify(response = s_n1) |>
+  calculate(stat = "mean")
+
+set.seed(2022)
+null_dist_1_sample <- sal |>
+  specify(response = s_n1) |>
+  hypothesize(null = "point", mu = 35) |>
+  generate(reps = 2000, type = "bootstrap") |>
+  calculate(stat = "mean")
+
+null_dist_1_sample |>
+  visualize() +
+  shade_p_value(observed_statistic, direction = "two-sided")
+```
+
+## Bootstrap p value via `infer`
+
+```{r}
+#| echo: true
+p_value_1_sample <- null_dist_1_sample |>
+  get_p_value(obs_stat = observed_statistic,
+              direction = "two-sided")
+
+p_value_1_sample
+```
+
+## Bootstrap 95% CI via `infer`
+
+```{r}
+#| echo: true
+ci_1_sample <- null_dist_1_sample |>
+  get_confidence_interval(point_estimate = observed_statistic, 
+                          level = 0.95, type = "se")
+
+ci_1_sample
+```
+
+## Bootstrap 95% CI via `Hmisc`
+
+```{r}
+#| echo: true
+set.seed(43134)
+smean.cl.boot(sal$s_n1, conf.int = 0.95, B = 2000)
+```
+
+## Wilcoxon Signed Rank
+
+```{r}
+#| echo: true
+wilcox.test(sal$s_n1, conf.int = TRUE, conf.level = 0.95)
+```
+
+## Question B Results {.smaller}
+
+Procedure | *p* | Estimate | 95% CI
+:--------: | -----: | :--------: | --------:
+t | 0.039 | $\hat{\mu} = \bar{x}$ = 32.63 | (30.38, 34.88)
+Bootstrap via `infer` | 0.029 | $\hat{\mu} = \bar{x}$ = 32.63 | (30.5, 34.8)
+Bootstrap via `Hmisc` | < 0.05 | $\hat{\mu} = \bar{x}$ = 32.63 | (30.35, 34.84)
+Wilcoxon | < 0.001| ps.-med. = 32.71 | (30.17, 35.00)
+
+What can we conclude?
+
+## What's in the rest of these slides
+
+Another one-sample example, with some slight variations in approach, and more details in some spots.
+
+## Session Information
+
+```{r}
+#| echo: true
+sessionInfo()
+```
+
+# For Home Study
+
+## Key Question for Home Study
+
+Can we test to see whether the mean of the base-10 logged (RNA copies per milliliter) in the NP samples is detectably different from 4.5?
+
+- Our null hypothesis is $H_0: \mu = 4.5$ vs. the two-tailed alternative $H_A: \mu \neq 4.5$.
+
+### Create a new variable
+
+```{r}
+#| echo: true
+sal <- sal |>
+  mutate(np_log = log10(np_titre))
+```
 
 ## DTDP: Base-10 Logarithm of `np_titre`
 
@@ -163,20 +750,6 @@ mosaic::favstats(~ log10(np_titre), data = sal) |> kbl(digits = 3) |> kable_mini
 ```
 
 Note the log of the mean ($log_{10}(98527107)$ = 7.994) isn't the mean of the logs (4.927).
-
-## Today's First Key Question
-
-1. Can we test to see whether the mean of the logged (RNA copies per milliliter) in the NP samples is detectably different from 4.5?
-
-- Our null hypothesis is $H_0: \mu = 4.5$ vs. the two-tailed alternative $H_A: \mu \neq 4.5$.
-
-### Create a new variable
-
-```{r}
-#| echo: true
-sal <- sal |>
-  mutate(np_log = log10(np_titre))
-```
 
 ## Our Assumptions
 
@@ -327,28 +900,6 @@ So, if $\alpha = 0.05$, and we have
 
 what should we conclude?
 
-## Defining a *p* Value (but not very well)
-
-The *p* value estimates the probability that we would obtain a result as much in favor or more in favor of the alternative hypothesis $H_A$ as we did, assuming that $H_0$ is true. 
-
-- The *p* value is a conditional probability of seeing evidence as strong or stronger in favor of $H_A$ calculated **assuming** that $H_0$ is true.
-
-### How people use the *p* Value
-
-- If the *p* value is less than $\alpha$, this suggests we might reject $H_0$ in favor of $H_A$, and declare the result statistically significant.
-
-But we won't be comfortable with doing that, at least in time.
-
-## What the *p* Value isn't
-
-The *p* value is not a lot of things. It's **NOT**
-
-- The probability that the alternative hypothesis is true
-- The probability that the null hypothesis is false
-- Or anything like that.
-
-The *p* value **is closer to** a statement about the amount of statistical evidence contained in the data that favors the alternative hypothesis $H_A$. It's a measure of the evidence's credibility.
-
 ## One-Sample t test
 
 - $H_0: \mu = 4.5$ vs. the two-tailed alternative $H_A: \mu \neq 4.5$.
@@ -375,10 +926,6 @@ Hypothesis Testing about a Population Mean (or Median) that don't require the as
 1. with infer() tools, a randomization test for the mean relying on the bootstrap
 2. via a bootstrap confidence interval for the mean (or the median)
 3. with the Wilcoxon signed-rank test (tests population pseudo-median)
-
-## What the infer package does
-
-![](c13/images/ht-diagram.png)
 
 ## A randomization test using infer tools
 
@@ -413,7 +960,7 @@ Using the bootstrap, we need to set a seed so we can replicate our work later:
 
 ```{r}
 #| echo: true
-set.seed(432)
+set.seed(431)
 null_dist_1_sample <- sal |>
   specify(response = np_log) |>
   hypothesize(null = "point", mu = 4.5) |>
@@ -446,17 +993,6 @@ p_value_1_sample
 ```
 
 Thus, if the true mean logged counts/ml was really 4.5, our approximation of the probability that we would see a test statistic as or more extreme than is approximately 0.04.
-
-## The infer package
-
-Four main verbs / functions:
-
-Verb | Activity
------- | --------------------------------
-`specify()` | specify variable, or relationship between variables, that interests us
-`hypothesize()` | declare the null hypothesis
-`generate()` | generate data reflecting the null hypothesis
-`calculate()` | obtain a distribution of statistics from the generated data to form the null distribution
 
 ## What if our null hypothesis changed?
 
@@ -506,7 +1042,7 @@ t.test(sal$np_log, mu = 4.5, alternative = "greater")
 ```{r}
 #| echo: true
 
-set.seed(43202)
+set.seed(43102)
 smean.cl.boot(sal$np_log, conf.int = 0.95, B = 2000)
 ```
 
@@ -553,7 +1089,7 @@ It is still possible that the results can be both:
 
 The Wilcoxon signed rank approach builds interval estimates for the population *pseudo-median* when the population can only be assumed to be symmetric. 
 
-- For any sample, the pseudomedian is defined as the median of all of the midpoints of pairs of observations in the sample. 
+- For any sample, the pseudo-median is defined as the median of all of the midpoints of pairs of observations in the sample. 
 - As it turns out, if you're willing to assume the population is **symmetric** (but not necessarily Normally distributed) then the pseudo-median is equal to the population median.
 
 ## Wilcoxon based 95% confidence interval
@@ -565,25 +1101,11 @@ wilcox.test(sal$np_log, conf.int = TRUE, conf.level = 0.95)
 
 ## Interpreting the Wilcoxon Signed Rank CI
 
-If we're willing to believe the `np_log` values come from a population with a symmetric distribution, the 95% Confidence Interval for the population median would be (`r round(wilcox.test(sal$np_log, conf.int=TRUE, conf.level=0.95)$conf.int,1)`)
-
-For a non-symmetric population, this only applies to the *pseudo-median*.
-
-The pseudo-median is actually fairly close to the sample mean and median if the population actually follows a symmetric distribution.
-
-```{r}
-mosaic::favstats(~ np_log, data = sal)
-```
-
-## Second Key Question
-
-2. Can we test to see whether the mean RNA copies per milliliter is detectably different in the NP sample as compared to the saliva sample for each patient?
-  - Equivalently, could the paired NP - saliva differences by subject have plausibly come from a population with mean zero?
-
-## Session Information
+Again, the pseudo-median would be close to the sample mean and median if the population actually follows a symmetric distribution.
 
 ```{r}
 #| echo: true
-sessionInfo()
+mosaic::favstats(~ np_log, data = sal)
 ```
+
 
